# pg_session_jwt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  neon_jwt.control  pg_session_jwt.control
.github/workflows/: lint.yml
docs/: organization-rls-snippet.md
pgrx-tests/: Cargo.toml  LICENSE  README.md
pgrx-tests/src/: framework.rs  lib.rs
pgrx-tests/src/framework/: shutdown.rs
regress/: README.md  generate_jwt.py
regress/expected/: 00_setup.out  01_basic.out  02_validation.out  03_errors.out
regress/sql/: 00_setup.sql  01_basic.sql  02_validation.sql  03_errors.sql
sql/: pg_session_jwt--0.0.1--0.1.0.sql  pg_session_jwt--0.1.0--0.1.1.sql  pg_session_jwt--0.1.1--0.1.2.sql  pg_session_jwt--0.1.2--0.2.0.sql  pg_session_jwt--0.2.0--0.3.0.sql  pg_session_jwt--0.3.0--0.3.1.sql  pg_session_jwt--0.3.1--0.4.0.sql  pg_session_jwt--0.4.0--0.3.1.sql  pg_session_jwt--0.4.0--0.5.0.sql  pg_session_jwt--0.5.0--0.4.0.sql
src/: gucs.rs  lib.rs
tests/: pg_session_jwt.rs
