[package]
name = "pg_session_jwt"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = ["dep:rand", "base64ct/alloc"]

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
heapless = { version = "0.7.0", features = ["serde"] }
jose-jwk = { version = "0.1.2", default-features = false, features = ["p256"] }
p256 = { version = "0.13.2", default-features = false, features = ["sha2", "sha256", "ecdsa", "digest", "serde", "jwk"] }
pgrx = "=0.12.4"
serde = { version = "1.0.203", features = ["derive"], default-features = false }
serde_json = { version = "1.0.117", default-features = false }

rand = { version = "0.8", optional = true }
pgrx-tests = "=0.12.4"

[dev-dependencies]
pgrx-tests = "=0.12.4"
rand = "0.8"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "pgrx_embed_pg_session_jwt"
path = "./src/bin/pgrx_embed.rs"