[workspace]
members = ["pgrx-tests"]

[package]
name = "pg_session_jwt"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_session_jwt"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
heapless = { version = "0.8.0", features = ["serde"] }
jose-jwk = { version = "0.1.2", default-features = false }
ed25519-dalek = { version = "2", default-features = false }
pgrx = "0.12.6"
serde = { version = "1.0.203", features = ["derive"], default-features = false }
serde_json = { version = "1.0.117", default-features = false }

[dev-dependencies]
eyre = "0.6.12"
libtest-mimic = "0.8.1"
pgrx-tests = { path = "./pgrx-tests" }
postgres = "0.19.9"
rand = "0.8"
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[test]]
name = "tests"
harness = false
path = "tests/pg_session_jwt.rs"
